<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Simple Indoor Cycling Meter</string>
    <string name="connect_button">Se connecter</string>
    <string name="disconnect_button">Se déconnecter</string>
    <string name="power_label">Puissance :</string>
    <string name="cadence_label">Cadence :</string>
    <string name="speed_label">Vitesse :</string>
    <string name="distance_label">Distance :</string>
    <string name="calories_label">Calories :</string>
    <string name="avg_speed_label">Vit. moy :</string>
    <string name="watts_unit">W</string>
    <string name="rpm_unit">rpm</string>
    <string name="kmh_unit">km/h</string>
    <string name="km_unit">km</string>
    <string name="kcal_unit">kcal</string>
    <string name="weight_label">Poids :</string>
    <string name="kg_unit">kg</string>
    <string name="save_weight">Sauvegarder</string>
    <string name="searching">Recherche capteur...</string>
    <string name="connected">Connecté</string>
    <string name="disconnected">Déconnecté</string>
    <string name="no_bluetooth">Bluetooth non disponible</string>
    <string name="bluetooth_disabled">Bluetooth désactivé</string>
    <string name="permission_required">Permission Bluetooth requise</string>
    <string name="start_session">Démarrer session</string>
    <string name="stop_session">Arrêter session</string>
    <string name="session_history">Historique</string>
    <string name="no_sessions">Aucune session enregistrée</string>
    <string name="delete_session">Supprimer</string>
    <string name="session_saved">Session enregistrée !</string>
</resources>